--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -127,8 +127,8 @@ CommitMsg:
 PreCommit:
   ALL:
     problem_on_unmodified_line: report
-    requires_files: true
-    required: false
+    requires_files: false
+    required: true
     quiet: false
 
   AuthorEmail:
